edit-tv_schedules_controller
- gem(simple_calendar)導入
- simple_calendarの部分テンプレート画面作成(html&scss)
- simple_calendarの部分テンプレートを用いてtv_schedulesのindex/search画面作成
- searchのアクション&ルーティング設定

--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -5,11 +5,17 @@ html {
 body {
   height: 100%;
   margin: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .wrapper {
   height: 100vh;
   width: 100vw;
+  background-color: darkcyan;
 }
 
 .header {
@@ -27,7 +33,10 @@ body {
 }
 
 ul {
-  list-style: none;
+  list-style: none; 
+}
+
+.link_box {
   display: flex;
   justify-content: space-around;
 }
@@ -98,4 +107,20 @@ ul {
   height: 50%;
   width: 100%;
   background-color: darkgray;
+}
+
+.TvTitle {
+  margin-bottom: 5px;
+}
+
+.start_time {
+  background-color: darkgray;
+}
+
+.channel {
+  background-color: darkkhaki;
+}
+
+.title {
+  background-color: darksalmon;
 }
