edit-tv_schedules_controller
- tv_schedules_controllerのindexにアクション定義、searchにuserが保存したイベントも一緒に表示出来るように追記
- index画面にuserの登録済イベントが表示されるように修正
- search画面にuserのイベントかtvスケジュールかをで表示を分岐

--- a/app/assets/stylesheets/modules/index.scss
+++ b/app/assets/stylesheets/modules/index.scss
@@ -62,19 +62,36 @@ ul {
   width: 80px;
 }
 
-.TvTitle {
+.TvSchedule {
   margin-bottom: 5px;
   border: 1px solid deeppink;
+  
+  .start_time {
+    background-color: #FFDDFF;
+  }
+  
+  .channel {
+    background-color: #FFFFCC;
+  }
+  
+  .title {
+    background-color: #BBFFFF;
+  }
 }
 
-.start_time {
-  background-color: #FFDDFF;
-}
-
-.channel {
-  background-color: #FFFFCC;
-}
-
-.title {
-  background-color: #BBFFFF;
+.UserEvent {
+  margin-bottom: 5px;
+  border: 1px solid deeppink;
+  
+  .start_time {
+    background-color: darkseagreen;
+  }
+  
+  .channel {
+    background-color: #FFFFCC;
+  }
+  
+  .title {
+    background-color: #BBFFFF;
+  }
 }
