--- a/app/views/tv_schedules/index.html.erb
+++ b/app/views/tv_schedules/index.html.erb
@@ -12,16 +12,16 @@
         <%= form.submit "検索", class: "SearchBtn" %>
         <% end %>
     </div>
-      <%= week_calendar number_of_weeks: 1 do |date, tvs| %>
+      <%= week_calendar number_of_weeks: 1, events: @events do |date, events| %>
       
         <%= date.day %>
 
-        <% tvs.each do |tv| %>
-          <div class="TvTitle">
+        <% events.each do |event| %>
+          <div class="UserEvent">
             <ul>
-              <li class="start_time"><%= tv.start_time.to_s(:datetime) %></li>
-              <li class="channel"><%= tv.channel %></li>
-              <li class="title"><%= tv.title %></li>
+              <li class="start_time"><%= event.start_time.to_s(:datetime) %></li>
+              <li class="channel"><%= event.channel %></li>
+              <li class="title"><%= event.title %></li>
             </ul>
           </div>
         <% end %>
