change_table-tv_schedule-to-event
- テーブルの用途変更に伴うテーブル名変更
- テーブル名変更tv_schedule→eventに伴いmodel/controllerファイル名、viewファイルフォルダ名、ルーティング変更
- カラム名変更、channel→memo

--- a/app/assets/stylesheets/modules/new.scss
+++ b/app/assets/stylesheets/modules/new.scss
@@ -26,7 +26,7 @@ select {
   color: black;
 }
 
-#tv_schedule_channel {
+#event_memo {
   width: 40%;
   height: 100px;
   background-color: blanchedalmond;
