update-events_controller
- before_actionにログインしないとnew/search画面に入れないように設定
- index/search画面のクラス名変更
- カレンダーの週表示部分をその週のスタート月の表示に変更

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,7 +21,7 @@
           <div class="UserEvent">
             <ul>
               <li class="start_time"><%= event.start_time.to_s(:datetime) %></li>
-              <li class="channel"><%= event.memo %></li>
+              <li class="memo"><%= event.memo %></li>
               <li class="title"><%= event.title %></li>
             </ul>
           </div>
