--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -22,14 +22,14 @@
               <ul>
                 <li class="start_time"><%= tv.start_time.to_s(:datetime) %></li>
                 <li class="title"><%= tv.title %></li>
-                <li class="channel"><%= tv.memo %></li>
+                <li class="memo"><%= tv.memo %></li>
               </ul>
             </div>
           <% else %>
             <div class="TvSchedule">
               <ul>
                 <li class="start_time"><%= tv.start_time.to_s(:datetime) %></li>
-                <li class="channel"><%= tv.memo %></li>
+                <li class="memo"><%= tv.memo %></li>
                 <li class="title"><%= tv.title %></li>
               </ul>
             </div>
