--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,7 +30,7 @@
   <% else %>
     <div class="header">
       <div class="UserInfo">
-        <div class="UserName">TVSearcher</div>
+        <div class="AppName">TVSearcher</div>
         <ul>
           <li><%= link_to "ログイン", new_user_session_path, class: 'post' %></li>
           <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
