--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,8 +21,8 @@
           <div class="UserEvent">
             <ul>
               <li class="start_time"><%= event.start_time.to_s(:datetime) %></li>
+              <li><%= link_to event.title, edit_event_path(event.id), class:"title" %></li>
               <li class="memo"><%= event.memo %></li>
-              <li class="title"><%= event.title %></li>
             </ul>
           </div>
         <% end %>
