--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,8 +3,8 @@
     <div class="UserInfo">
       <div class="UserName"><%= current_user.name %></div>
       <ul>
-        <li><%= link_to '戻る', root_path, class: "CreateEvent" %></li>
-        
+        <li><%= link_to '戻る', root_path, class: "return" %></li>
+        <li><%= link_to '削除', event_path, method: :delete, class: "DeleteEvent" %></li>
       </ul>
     </div>
   </div>
