update_edit.html
- 編集画面のリンク位置変更
- README.md修正

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,7 +4,6 @@
       <div class="UserName"><%= current_user.name %></div>
       <ul>
         <li><%= link_to '戻る', root_path, class: "return" %></li>
-        <li><%= link_to '削除', event_path, method: :delete, class: "DeleteEvent" %></li>
       </ul>
     </div>
   </div>
@@ -31,5 +30,6 @@
           </div>
 
         <% end %>
+        <div class="DeleteEvent"><%= link_to '削除', event_path, method: :delete %></div>
     </div>
 </div>
